# cockroach

./: DEPS.bzl  Makefile  go.mod  go.sum
pkg/ccl/changefeedccl/: changefeed_stmt.go
pkg/cli/: demo_cluster.go  mt_start_sql.go  start.go
pkg/internal/client/: batch.go
pkg/multitenant/tenantcostmodel/: model.go  settings.go
pkg/server/: BUILD.bazel  server.go  server_sql.go  status.go  testing_knobs.go  testserver.go
pkg/server/diagnostics/: BUILD.bazel  diagnostics.go  reporter.go  reporter_test.go  update_checker.go  update_checker_test.go
pkg/server/diagnostics/diagnosticspb/: BUILD.bazel  diagnostics.pb.go  diagnostics.proto
pkg/server/serverpb/: BUILD.bazel  status.pb.go  status.proto
pkg/settings/: registry.go
pkg/sql/: BUILD.bazel  backfill.go  conn_executor.go  conn_executor_exec.go  create_table.go  descriptor_mutation_test.go  max_one_row.go  opt_exec_factory.go  tablewriter_upsert_opt.go  telemetry_test.go  truncate.go  update.go  walk.go
pkg/sql/backfill/: backfill.go
pkg/sql/colexec/: execplan.go
pkg/sql/importer/: import_job.go
pkg/sql/logictest/: logic.go  timings.csv
pkg/sql/opt/: metadata.go  metadata_column.go  metadata_test.go  operator.go
pkg/sql/parser/: parse.go  sql.y
pkg/sql/row/: cascader.go  deleter.go  errors.go  updater.go
pkg/sql/rowexec/: distinct.go
pkg/sql/sessiondata/: session_data.go
pkg/sql/sqlbase/: column_type_properties.go  errors.go  structured.go
pkg/sql/vecindex/: fixup_processor.go  fixup_processor_test.go  split_data.go  vector_index.go  vector_index_test.go
pkg/workload/kv/: kv.go
(+152 files in other folders)
