load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "diagnosticspb",
    srcs = ["diagnostics.pb.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/server/diagnostics/diagnosticspb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/build",
        "//pkg/config/zonepb",
        "//pkg/roachpb",
        "//pkg/sql/catalog/descpb",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//sortkeys",
    ],
)

go_test(
    name = "diagnosticspb_test",
    srcs = ["dep_test.go"],
    embed = [":diagnosticspb"],
    deps = [
        "//pkg/testutils/buildutil",
        "//pkg/util/leaktest",
    ],
)
